[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hexlet-code",
    "prompt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[tool.uv.sources]
hexlet-code = { path = "dist/hexlet_code-0.1.0-py3-none-any.whl" }

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
