[project]
name = "hexlet-code"
version = "0.1.0"
description = "The best games for geeks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[tool.uv.sources]
hexlet-code = { path = "dist/hexlet_code-0.1.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"